--- a/Basic_JavaScript_Projects/Basic_HTML_1.html.html
+++ b/Basic_JavaScript_Projects/Basic_HTML_1.html.html
@@ -3,6 +3,8 @@
     <head>
         <script src="JS/Basic_JavaScript_1.js"></script>
 
+        <input type="text" id="demo" onkeydown="keydownFunction()" onkeyup="keyupFunction()">
+
     </head>
     <body>
         
