--- a/Basic_JavaScript_Projects/Basic_HTML_8.html
+++ b/Basic_JavaScript_Projects/Basic_HTML_8.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <scrpit src="JS/Basic_JavaScript_8.js"></scrpit>
+        <script src="JS/Basic_JavaScript_8.js"></script>
 
         <p id="Bring_Together"></p>
         <button onmouseover="full_Sentence()">Hover</button>
+
+        <p id="slice"></p>
+        <button onclick="slice_Method()">Click here</button>
+
+        <p id="big">Double Click to convert to uppercase</p>
+        <button ondblclick="convert_Upper()">Button</button>
+
+        <p id="on_a_string"></p>
+        <button onclick="add_Number()">Click</button>
+
+        <p id="precision"></p>
+        <button onmouseover="precision_Method()">hover</button>
+
+        <p id="fix"></p>
+        <button onclick="fix_Method()">Click Here</button>
 
     </body>
 </html>
